RESOLVED FIXED150107
User the correct notification strings for view service applications state change.
https://bugs.webkit.org/show_bug.cgi?id=150107
Summary User the correct notification strings for view service applications state cha...
Yongjun Zhang
Reported 2015-10-13 16:48:30 PDT
We should use the correct notification strings for view service app state changes.
Attachments
Patch. (2.59 KB, patch)
2015-10-13 17:11 PDT, Yongjun Zhang
barraclough: review+
Yongjun Zhang
Comment 1 2015-10-13 16:49:00 PDT
Yongjun Zhang
Comment 2 2015-10-13 17:11:40 PDT
WebKit Commit Bot
Comment 3 2015-10-13 17:14:28 PDT
Attachment 263041 [details] did not pass style-queue: ERROR: Source/WebKit2/UIProcess/ApplicationStateTracker.mm:130: Place brace on its own line for function definitions. [whitespace/braces] [4] ERROR: Source/WebKit2/UIProcess/ApplicationStateTracker.mm:133: Place brace on its own line for function definitions. [whitespace/braces] [4] Total errors found: 2 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Gavin Barraclough
Comment 4 2015-10-13 17:27:17 PDT
Note You need to log in before you can comment on or make changes to this bug.