Use the correct notification strings for view service applications state change. https://bugs.webkit.org/show_bug.cgi?id=150107

Use the correct notification names "_UIViewServiceHostDidEnterBackgroundNotification" and
"_UIViewServiceHostWillEnterForegroundNotification" to listen to view service application state changes.

Patch by Yongjun Zhang <yongjun_zhang@apple.com> on 2015-10-13
Reviewed by Gavin Barraclough.

* UIProcess/ApplicationStateTracker.mm:
(WebKit::ApplicationStateTracker::ApplicationStateTracker):



Canonical link: https://commits.webkit.org/168247@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@191022 268f45cc-cd09-0410-ab3c-d52691b4dbfc